[package]
name = "asyncapi"
version = "0.2.4"
edition = "2021"

authors = ["JP Stauffert", "Damody"]
license = "MIT OR Apache-2.0"
keywords = ["asyncapi"]
homepage = "https://gitlab.com/Tinted/asyncapi"
repository = "https://gitlab.com/Tinted/asyncapi"
description = "This crate aims to provide data structures that represent the AsyncAPI specification easily deserializable with serde."
readme = "Readme.md"

[dependencies]
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "1.9", features = ["serde-1"] }

[workspace]
members = [
    "generate-tests"
]